--- a/Style.css
+++ b/Style.css
@@ -94,26 +94,23 @@ nav a img{
   justify-content: center;
 }
 
-.ContentBox img:hover, .SmallContentBox img:hover{
+.ContentBox a:hover, .SmallContentBox a:hover{
   transform: translate(5px, -5px);
   filter: drop-shadow(-5px 5px 0px #000);
   transition-duration: .2s;
 }
 
-.ContentBox img{
+.ContentBox a{
   transition-duration: .2s;
   padding-left: 5px;
   object-fit: cover;
   padding-right: 30px;
 }
 
-.ContentBox .PosterImg{
-  transition-duration: .2s;
-  padding-left: 5px;
+.ContentBox a img{
   object-fit: cover;
-  padding-right: 30px;
-  width: 30%;
-  transition-duration: .2s;
+  height: 100%;
+  width: 100%;
 }
 
 .ContentTextBox{
@@ -132,11 +129,17 @@ nav a img{
   padding-left: 20px;
 }
 
-.SmallContentBox .PosterImg{
+.SmallContentBox a{
   object-fit: cover;
   max-width: 45%;
   padding-right: 0;
   transition-duration: .2s;
+  overflow: hidden;
+}
+
+.SmallContentBox a img{
+  width: auto;
+  height: 100%;
 }
 
 .linklogo{
