--- a/Style.css
+++ b/Style.css
@@ -196,6 +196,24 @@ nav a img{
   width: 35%;
 }
 
+.DetailsBox{
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.DetailsBox div{
+  width: 30%;
+  text-align: center;
+}
+
+.DetailsBox .vl{
+  border-left: 5px solid white;
+  height: 50px;
+  width: 0px;
+}
+
 hr {
     display: block;
     height: 1px;
