--- a/styleSimple.css
+++ b/styleSimple.css
@@ -25,15 +25,19 @@ nav a {
 
 .Seperator {
     height: 20px;
-    width: 40%;
+    width: 100%;
     color: #ffffff;
-    border-bottom: 5px solid #ffffff;
+    //border-bottom: 2px solid #ffffff;
     padding-bottom: 5px;
     margin-left: 10px;
+    text-align: center;
 }
 
 .Projects {
+    grid-template-columns: repeat(3, 1fr);
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -42,15 +46,21 @@ nav a {
     padding-right: 10px;
 }
 
-.ProjectBox img {
-    max-width: 500px;
-    width: 100%;
-    height: 80%;
+.ProjectBox .Poster {
+    min-width: 300px;
+    width: 500px;
+    height: 100%;
     object-fit: cover;
 }
 
-.ProjectBox .Poster {
-    max-width: 50%;
-    width: 10%;
-    height: 100%;
+.ExperimentBox {
+    margin: 10px;
+    padding-right: 10px;
+}
+
+.ExperimentBox img {
+    max-width: 500px;
+    width: 500px;
+    height: 300px;
+    object-fit: cover;
 }
