--- a/Style.css
+++ b/Style.css
@@ -83,13 +83,24 @@ nav a {
 }
 
 .Poster:hover {
-    box-shadow: 0px 0px 30px #808080;
+    box-shadow: -10px -10px 0px #9e1b19;
+    transform: translate(10px, 10px);
     transition-duration: 0.2s;
 }
 
 .ExperimentBox {
     margin: 10px;
     padding-right: 10px;
+    transition-duration: 0.2s;
+}
+
+.ExperimentBox h2{
+    padding: 0;
+    margin: 0;
+    color: #dbd9d4;
+    background: #0c0d0d;
+    height: 100%;
+    text-align: center;
 }
 
 .ExperimentBox img {
@@ -97,11 +108,12 @@ nav a {
     width: 500px;
     height: 300px;
     object-fit: cover;
-    transition-duration: 0.2s;
+    margin: 0;
 }
 
-.ExperimentBox img:hover {
-    box-shadow: 0px 0px 30px #808080;
+.ExperimentBox:hover {
+    box-shadow: -10px -10px 0px #9e1b19;
+    transform: translate(10px, 10px);
     transition-duration: 0.2s;
 }
 
