--- a/Style.css
+++ b/Style.css
@@ -198,3 +198,17 @@ h3, h2 {
 .SkillBox h1 {
     color: #e44d2c;
 }
+
+.UnderConstruction
+{
+    text-align: center;
+    position: absolute;
+    transform: translate(0px, -200px);
+    width: 500px;;
+    background-color: rgba(255, 255, 0, 0.3);
+    color: white;
+}
+
+.noHover{
+    pointer-events: none;
+}
